# seo-kit

./: .env.example  .gitignore  OPTIMIZER.md  README.md  SKILL.md  config.toml  config.toml.example  pyproject.toml  seo-kit.toml  surfaces.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: audit-fleet.yml  audit.yml  ci.yml  claude.yml  deploy.yml  optimize.yml
infra/: deploy-role.tf  main.tf  outputs.tf  providers.tf
scripts/: fleet_dashboard.py
seo-reports/: OPTIMIZER-LOG.md  seo-kit-20260705T010755Z.json  seo-kit-20260705T010755Z.md  seo-kit-20260705T010841Z.json  seo-kit-20260705T010841Z.md  seo-kit-20260705T022101Z.json  seo-kit-20260705T022101Z.md  seo-kit-20260705T041225Z.json  seo-kit-20260705T041225Z.md
seokit/: __init__.py  __main__.py  audit.py  cli.py  config.py  redact.py  report.py  setup.py  trend.py
seokit/providers/: __init__.py  ahrefs.py  base.py  bing.py  crawl.py  dataforseo.py  geo_probe.py  github.py  gsc.py  psi.py  semrush.py  serper.py  trends.py
site/: 404.html  index.html  robots.txt  sitemap.xml
tests/: test_audit_report.py  test_config.py  test_fleet_dashboard.py  test_redact.py  test_setup.py  test_trend.py
